--- a/package.json
+++ b/package.json
@@ -70,5 +70,9 @@
   "engines": {
     "node": ">=16.0.0"
   },
+  "resolutions": {
+    "string-width": "4.2.3",
+    "strip-ansi": "6.0.1"
+  },
   "packageManager": "yarn@1.22.19"
 }
