--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,6 +13,7 @@
     "postbuild": "cpy 'src/**/*.ejs' build/esm && cpy 'src/**/*.ejs' build/cjs"
   },
   "dependencies": {
+    "@proedis/utils": "1.4.0",
     "chalk": "4.1.2",
     "commander": "11.1.0",
     "eslint": "8.53.0",
